--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
 <body>
   <script src="script1.js"></script>
   <!-- <script src="script.js"></script> -->
+   <script>
+    function remainder(n,i){
+   if(n-(Math.floor(n/i))*i+i-i===0){
+          console.log(' divisible')
+       return true;
+     }else{
+       console.log('not divisible')
+       return false
+      }
+    }
+
+   </script>
 </body>
 </html>
